--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,8 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015-riot": "^1.1.0",
     "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
+    "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^2.28.0",
     "riot": "^3.4.4",
     "riot-hot-reload": "^1.0.0",
