--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Architecture for project with multiple riotjs apps",
   "main": "index.js",
   "scripts": {
-    "build-app": "webpack --progress --colors --display-modules --config app/webpack.config.js",
+    "build-app": "webpack --progress --colors --display-modules --config src/app/webpack.config.js",
+    "build-webpack": "webpack --progress --colors --display-modules --config src/webpack/webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ilan Copelyn",
