--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build-app": "webpack --progress --colors --display-modules --config src/app/webpack.config.js",
     "build-webpack": "webpack --progress --colors --display-modules --config src/webpack/webpack.config.js",
     "start-webpack": "webpack-dev-server --progress --colors --config src/webpack/webpack.config.js --watch --inline --hot -d --port 3001 && echo http://localhost:3001/webpack-dev-server/",
+    "build-static": "cp src/favicon.ico dist/ && cp -R src/all dist/ && cp -R src/static-html dist/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ilan Copelyn",
