--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Architecture for project with multiple riotjs apps",
   "main": "index.js",
   "scripts": {
+    "check-packages": "npm outdated || true",
     "build-app": "webpack --progress --colors --display-modules --config src/app/webpack.config.js",
     "build-webpack": "webpack --progress --colors --display-modules --config src/webpack/webpack.config.js",
     "start-webpack": "webpack-dev-server --progress --colors --config src/webpack/webpack.config.js --watch --inline --hot -d --port 3001 && echo http://localhost:3001/webpack-dev-server/",
