--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "index.js",
   "scripts": {
     "check-packages": "npm outdated || true",
-    "build-app": "webpack --progress --colors --display-modules --config src/app/webpack.config.js",
-    "build-webpack": "webpack --progress --colors --display-modules --config src/webpack/webpack.config.js",
-    "start-webpack": "webpack-dev-server --progress --colors --config src/webpack/webpack.config.js --watch --inline --hot -d --port 3001 && echo http://localhost:3001/webpack-dev-server/",
+    "build-app": "webpack --progress --colors --display-modules --config src/app/webpack.config.js && node open.js dist/app/index.html",
+    "build-progress-bar": "webpack --progress --colors --display-modules --config src/progress-bar/webpack.config.js && node open.js dist/progress-bar/index.html",
+    "build-test": "webpack --progress --colors --display-modules --config src/test/webpack.config.js && node open.js dist/test/index.html",
+    "build-tick-cross-toggle": "webpack --progress --colors --display-modules --config src/tick-cross-toggle/webpack.config.js && node open.js dist/tick-cross-toggle/index.html",
     "build-static": "cp src/favicon.ico dist/ && cp -R src/all dist/ && cp -R src/static-html dist/",
+    "build-webpack": "webpack --progress --colors --display-modules --config src/webpack/webpack.config.js && node open.js dist/webpack/index.html",
+    "start-webpack": "webpack-dev-server --progress --colors --config src/webpack/webpack.config.js --watch --inline --hot -d --port 3001 && echo http://localhost:3001/webpack-dev-server/",
+
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ilan Copelyn",
@@ -17,11 +21,13 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-riot": "^1.1.0",
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
     "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^2.28.0",
+    "open": "0.0.5",
     "riot": "^3.4.4",
     "riot-hot-reload": "^1.0.0",
     "riot-tag-loader": "^1.0.0",
