--- a/package.json
+++ b/package.json
@@ -18,24 +18,25 @@
   "author": "Ilan Copelyn",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2015-riot": "^1.1.0",
-    "css-loader": "^0.28.4",
-    "file-loader": "^0.11.2",
-    "font-awesome": "^4.7.0",
-    "html-webpack-plugin": "^2.28.0",
+    "babel-cli": "6.24.1",
+    "babel-core": "6.24.1",
+    "babel-loader": "6.2.10",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-es2015-riot": "1.1.0",
+    "css-loader": "0.28.4",
+    "file-loader": "0.11.2",
+    "font-awesome": "4.7.0",
+    "html-webpack-plugin": "2.28.0",
     "open": "0.0.5",
-    "riot": "^3.4.4",
-    "riot-hot-reload": "^1.0.0",
-    "riot-tag-loader": "^1.0.0",
-    "style-loader": "^0.18.2",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.5"
+    "riot": "3.4.4",
+    "riot-route": "3.1.2",
+    "riot-hot-reload": "1.0.0",
+    "riot-tag-loader": "1.0.0",
+    "style-loader": "0.18.2",
+    "webpack": "2.4.1",
+    "webpack-dev-server": "2.4.5"
   },
   "dependencies": {
-    "jquery": "^3.2.1"
+    "jquery": "3.2.1"
   }
 }
